# littlebooktimeseries

./: pyproject.toml
book/: _quarto.yml  pyproject.toml  reduction.ipynb
book/_book/: index.html  search.json
book/_book/content/pt/01_intro/: index.html
book/_book/content/pt/part1/: index.html  naive.html  statistical_models_differentiation.html
book/content/pt/part1/: components_and_diff.qmd  ets_and_ar.qmd  statistical_models_differentiation.qmd
book/content/pt/part2/: ml_models.qmd  ml_models.quarto_ipynb
book/src/tsbook/forecasting/: global_reduction.py  reduction.py
