[tool.poetry]
name = "tsbook"
version = "0.1.0"
description = ""
authors = ["felipeangelimvieira <felipeangelim@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
