[tool.poetry]
name = "tsbook"
version = "0.1.0"
description = ""
authors = ["felipeangelimvieira <felipeangelim@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
sktime = "^0.39.0"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
